--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tomcat8 (8.0.8-2) UNRELEASED; urgency=medium
+
+  * Search for OpenJDK 8 and Oracle JDKs when starting the server
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 26 May 2014 12:13:02 +0200
+
 tomcat8 (8.0.8-1) unstable; urgency=medium
 
   * New upstream release
