--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-tomcat8 (8.0.8-2) UNRELEASED; urgency=medium
+tomcat8 (8.0.9-1) UNRELEASED; urgency=medium
 
   [ Emmanuel Bourg ]
+  * New upstream release
+    - Refreshed the patches
   * Search for OpenJDK 8 and Oracle JDKs when starting the server
   * Removed the dependency on the non existent java-7-runtime package
   * Fixed a link still pointing to the Tomcat 7 documentation in README.Debian
