--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.0.9-2) UNRELEASED; urgency=medium
+
+  * Install the missing tomcat-dbcp.jar in libtomcat8-java and use it as
+    the default JDBC pool implementation instead of Commons DBCP.
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Wed, 25 Jun 2014 11:40:20 +0200
+
 tomcat8 (8.0.9-1) unstable; urgency=medium
 
   [ Emmanuel Bourg ]
