Depend on openjdk-7 instead of openjdk-6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 tomcat8 (8.0.14-1~bpo70+1) wheezy-backports; urgency=low
 
   * Rebuild for wheezy-backports
+    - Depend on openjdk-7 instead of openjdk-6 which is the default in Wheezy
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 10 Dec 2014 15:41:03 +0100
 
