--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 tomcat8 (8.5.9-1~bpo7+1) wheezy-backports-sloppy; urgency=medium
 
   * Rebuild for wheezy-backports-sloppy
+    - Depend on openjdk-7 instead of openjdk-6 which is the default in Wheezy
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 26 Jan 2017 17:59:47 +0100
 
