--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ tomcat8 (8.0.9-2) UNRELEASED; urgency=medium
 
   * Install the missing tomcat-dbcp.jar in libtomcat8-java and use it as
     the default JDBC pool implementation instead of Commons DBCP.
+  * Removed the obsolete patch 0012-java7-compat.patch
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 25 Jun 2014 11:40:20 +0200
 
