Build the Javadoc with the JDK specified by the JAVA_HOME variable instead of the default JDK

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ tomcat8 (8.0.9-1~bpo70+1) wheezy-backports; urgency=low
 
   * Rebuild for wheezy-backports
     - Depend on openjdk-7 instead of openjdk-6 which is the default in Wheezy
+    - Build the Javadoc with the JDK specified by the JAVA_HOME variable
+      instead of the default JDK
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 25 Jun 2014 08:55:40 +0200
 
