--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ tomcat8 (8.5.9-1~bpo7+1) wheezy-backports-sloppy; urgency=medium
 
   * Rebuild for wheezy-backports-sloppy
     - Depend on openjdk-7 instead of openjdk-6 which is the default in Wheezy
+    - Modified the tests to compile and run with the versions of JUnit,
+      Hamcrest and EasyMock available in Wheezy
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 26 Jan 2017 17:59:47 +0100
 
