--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ tomcat8 (8.0.9-2) UNRELEASED; urgency=medium
     the default JDBC pool implementation instead of Commons DBCP.
   * Removed the obsolete patch 0012-java7-compat.patch
   * Tightened the build dependency on junit4 (>= 4.11)
+  * Build the Javadoc with the JDK specified by the JAVA_HOME variable
+    instead of the default JDK (this fixes a build failure when backporting
+    to Wheezy)
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 25 Jun 2014 11:40:20 +0200
 
