--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 tomcat8 (8.0.9-2) UNRELEASED; urgency=medium
 
+  * Depend on libecj-java >= 3.10.0 to support the new Java 8 syntax in JSPs
   * Install the missing tomcat-dbcp.jar in libtomcat8-java and use it as
     the default JDBC pool implementation instead of Commons DBCP.
   * Removed the obsolete patch 0012-java7-compat.patch
