--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ tomcat8 (8.0.9-2) UNRELEASED; urgency=medium
   * Build the Javadoc with the JDK specified by the JAVA_HOME variable
     instead of the default JDK (this fixes a build failure when backporting
     to Wheezy)
+  * Removed the note about the authbind IPv6 incompatibility
+    in /etc/defaults/tomcat8
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 25 Jun 2014 11:40:20 +0200
 
