--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-tomcat8 (8.0.9-2) UNRELEASED; urgency=medium
+tomcat8 (8.0.12-1) UNRELEASED; urgency=medium
 
+  * New upstream release
+    - Refreshed the patches
   * Depend on libecj-java >= 3.10.0 to support the new Java 8 syntax in JSPs
   * Install the missing tomcat-dbcp.jar in libtomcat8-java and use it as
     the default JDBC pool implementation instead of Commons DBCP.
