--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ tomcat8 (8.0.12-1) UNRELEASED; urgency=medium
 
   * New upstream release
     - Refreshed the patches
+  * No longer create the common/server/shared directories under
+    /var/lib/tomcat8, and use a unique lib directory as documented
+    upstream since Tomcat 6. The old directories are still supported
+    if inherited from a previous installation (Closes: #754386)
   * Depend on libecj-java >= 3.10.0 to support the new Java 8 syntax in JSPs
   * Install the missing tomcat-dbcp.jar in libtomcat8-java and use it as
     the default JDBC pool implementation instead of Commons DBCP.
