--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tomcat8 (8.0.12-2) UNRELEASED; urgency=medium
+
+  * Build depend on libcglib3-java instead of libcglib-java
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 29 Sep 2014 12:41:52 +0200
+
 tomcat8 (8.0.12-1) unstable; urgency=medium
 
   * New upstream release
