--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-tomcat8 (8.0.12-2) UNRELEASED; urgency=medium
+tomcat8 (8.0.14-1) UNRELEASED; urgency=medium
 
+  * New upstream release
+    - Refreshed the patches
   * Build depend on libcglib3-java instead of libcglib-java
 
  -- Emmanuel Bourg <ebourg@apache.org>  Mon, 29 Sep 2014 12:41:52 +0200
