--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.0.15-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+    - Refreshed the patches
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 08 Dec 2014 23:51:13 +0100
+
 tomcat8 (8.0.14-1) unstable; urgency=medium
 
   * New upstream release
