--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-tomcat8 (8.0.17-1) UNRELEASED; urgency=medium
+tomcat8 (8.0.17-1) experimental; urgency=medium
 
   * New upstream release
     - Refreshed the patches
 
- -- Emmanuel Bourg <ebourg@apache.org>  Sun, 18 Jan 2015 21:30:57 +0100
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 19 Jan 2015 09:58:16 +0100
 
 tomcat8 (8.0.15-1) experimental; urgency=medium
 
