--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.0.18-2) UNRELEASED; urgency=medium
+
+  * debian/orig-tar.sh: Exclude the taglibs-standard-*.jar files
+    from the upstream tarball
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 30 Mar 2015 17:16:18 +0200
+
 tomcat8 (8.0.18-1) experimental; urgency=medium
 
   * New upstream release
