--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-tomcat8 (8.0.18-2) UNRELEASED; urgency=medium
+tomcat8 (8.0.21-1) UNRELEASED; urgency=medium
 
+  * New upstream release
+    - Refreshed the patches
   * debian/orig-tar.sh: Exclude the taglibs-standard-*.jar files
     from the upstream tarball
 
