--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ tomcat8 (8.0.21-1) UNRELEASED; urgency=medium
     - Refreshed the patches
   * debian/orig-tar.sh: Exclude the taglibs-standard-*.jar files
     from the upstream tarball
+  * Support the JVMs installed by the older versions of java-package (<< 0.52)
+    and the oracle-java<n>-installer packages from webupd8 (Closes: #769166)
 
  -- Emmanuel Bourg <ebourg@apache.org>  Mon, 30 Mar 2015 17:16:18 +0200
 
