--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.0.21-3) UNRELEASED; urgency=medium
+
+  * Removed the timstamp from the Javadoc of the Servlet API
+    to make the build reproducible
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Wed, 06 May 2015 09:30:38 +0200
+
 tomcat8 (8.0.21-2) unstable; urgency=medium
 
   * Upload to unstable.
