--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-tomcat8 (8.0.21-3) UNRELEASED; urgency=medium
+tomcat8 (8.0.22-1) UNRELEASED; urgency=medium
 
+  * New upstream release
+    - Refreshed the patches
   * Removed the timstamp from the Javadoc of the Servlet API
     to make the build reproducible
 
