--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ tomcat8 (8.0.22-1) UNRELEASED; urgency=medium
 
   * New upstream release
     - Refreshed the patches
+    - No longer install tomcat-spdy.jar (removed upstream)
   * Removed the timstamp from the Javadoc of the Servlet API
     to make the build reproducible
 
