--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ tomcat8 (8.0.22-2) UNRELEASED; urgency=medium
 
   * debian/rules:
     - Modified to use the dh sequencer
+    - Simplified the ant invocation and moved some properties
+      to debian/ant.properties
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 07 May 2015 08:34:56 +0200
 
