Do not set the version.* properties already defined in build.properties.default

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ tomcat8 (8.0.22-2) UNRELEASED; urgency=medium
     - Modified to use the dh sequencer
     - Simplified the ant invocation and moved some properties
       to debian/ant.properties
+    - Do not set the version.* properties already defined
+      in build.properties.default
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 07 May 2015 08:34:56 +0200
 
