--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ tomcat8 (8.0.22-2) UNRELEASED; urgency=medium
       to debian/ant.properties
     - Do not set the version.* properties already defined
       in build.properties.default
+    - Renamed T_VER to VERSION
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 07 May 2015 08:34:56 +0200
 
