--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ tomcat8 (8.0.22-2) UNRELEASED; urgency=medium
     - Renamed T_VER to VERSION
     - No longer remove the long gone .svn directories under
       /usr/share/tomcat8/webapps/default_root
+    - Let dh_fixperms set the permissions instead of calling chmod +x
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 07 May 2015 08:34:56 +0200
 
