--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ tomcat8 (8.0.22-2) UNRELEASED; urgency=medium
     - Do not set the version.* properties already defined
       in build.properties.default
     - Renamed T_VER to VERSION
+    - Removed the RWFILES and RWLOC variables
     - No longer remove the long gone .svn directories under
       /usr/share/tomcat8/webapps/default_root
     - Let dh_fixperms set the permissions instead of calling chmod +x
