--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ tomcat8 (8.0.22-2) UNRELEASED; urgency=medium
     - Let dh_fixperms set the permissions instead of calling chmod +x
     - Use debian/tomcat8-user.manpages instead of calling dh_installman
     - Updated the copyright year in the Javadoc
+    - Simplified the call to mh_install
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 07 May 2015 08:34:56 +0200
 
