--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.0.23-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * debian/rules: Use an english locale when generating the documentation
+    to improve the reproducibility
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Wed, 24 Jun 2015 19:20:31 +0200
+
 tomcat8 (8.0.23-1) unstable; urgency=medium
 
   * New upstream release
