--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-tomcat8 (8.0.23-2) UNRELEASED; urgency=medium
+tomcat8 (8.0.24-1) UNRELEASED; urgency=medium
 
   * Team upload.
+  * New upstream release
+    - Refreshed the patches
   * debian/rules: Use an english locale when generating the documentation
     to improve the reproducibility
 
