--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.0.24-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Fixed an upgrade error when /etc/tomcat8/tomcat-users.xml is removed
+    (LP: #1010791)
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Tue, 04 Aug 2015 13:35:03 +0200
+
 tomcat8 (8.0.24-1) unstable; urgency=medium
 
   * Team upload.
