--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ tomcat8 (8.0.24-2) UNRELEASED; urgency=medium
   * Changed the authbind configuration to allow IPv6 connections (LP: #1443041)
   * Fixed an upgrade error when /etc/tomcat8/tomcat-users.xml is removed
     (LP: #1010791)
+  * Fixed a minor HTML error in the default index.html file (LP: #1236132)
 
  -- Emmanuel Bourg <ebourg@apache.org>  Tue, 04 Aug 2015 13:35:03 +0200
 
