--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.0.26-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Fixed a localized date in the documentation to improve the reproducibility
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 19 Oct 2015 11:12:07 +0200
+
 tomcat8 (8.0.26-1) unstable; urgency=medium
 
   * Team upload.
