--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-tomcat8 (8.0.26-2) UNRELEASED; urgency=medium
+tomcat8 (8.0.28-1) UNRELEASED; urgency=medium
 
   * Team upload.
+  * New upstream release
+    - Refreshed the patches
   * Fixed a localized date in the documentation to improve the reproducibility
 
  -- Emmanuel Bourg <ebourg@apache.org>  Mon, 19 Oct 2015 11:12:07 +0200
