--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ tomcat8 (8.0.30-1) UNRELEASED; urgency=medium
   * Team upload.
   * New upstream release
     - Refreshed the patches
+  * Use LC_ALL instead of LANG to format the date and make the documentation
+    reproducible on the builders
 
  -- Emmanuel Bourg <ebourg@apache.org>  Fri, 18 Dec 2015 09:48:39 +0100
 
