--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.0.30-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Fixed a warning in catalina.out caused by an incorrect path
+    for the root context (Closes: #808378)
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 21 Dec 2015 11:20:10 +0100
+
 tomcat8 (8.0.30-1) unstable; urgency=medium
 
   * Team upload.
