--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-tomcat8 (8.0.30-2) UNRELEASED; urgency=medium
+tomcat8 (8.0.32-1) UNRELEASED; urgency=medium
 
   * Team upload.
+  * New upstream release
   * Fixed a warning in catalina.out caused by an incorrect path
     for the root context (Closes: #808378)
 
