--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat8 (8.0.32-1) UNRELEASED; urgency=medium
+tomcat8 (8.0.32-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream release
