--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ tomcat8 (8.0.36-1) UNRELEASED; urgency=medium
   * Team upload.
   * New upstream release
     - Refreshed the patches
+  * Standards-Version updated to 3.9.8 (no changes)
 
  -- Emmanuel Bourg <ebourg@apache.org>  Fri, 25 Mar 2016 09:22:23 +0100
 
