--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat8 (8.0.36-1) UNRELEASED; urgency=medium
+tomcat8 (8.0.36-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream release
@@ -7,7 +7,7 @@ tomcat8 (8.0.36-1) UNRELEASED; urgency=medium
   * Standards-Version updated to 3.9.8 (no changes)
   * Use a secure Vcs-Git URL
 
- -- Emmanuel Bourg <ebourg@apache.org>  Fri, 25 Mar 2016 09:22:23 +0100
+ -- Emmanuel Bourg <ebourg@apache.org>  Tue, 14 Jun 2016 14:34:46 +0200
 
 tomcat8 (8.0.32-1) unstable; urgency=medium
 
