--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ tomcat8 (8.0.36-2) UNRELEASED; urgency=medium
 
   * Team upload.
   * Removed the default 128M heap limit (LP: #568823)
+  * Depend on taglibs-standard instead of jakarta-taglibs-standard
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 21 Jul 2016 14:26:01 +0200
 
