--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ tomcat8 (8.0.14-1+deb8u3) jessie-security; urgency=medium
   * Team upload.
   * tomcat8.init: Protect /var/lib/tomcat8/catalina.out against a symlink
     attack and possible root privilege escalation.
+  * Do not unconditionally overwrite files in /etc/tomcat8 anymore.
+    (Closes: #825786)
 
  -- Markus Koschany <apo@debian.org>  Thu, 11 Aug 2016 22:19:27 +0200
 
