--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ tomcat8 (8.0.36-2) unstable; urgency=medium
   * Team upload.
   * Do not unconditionally overwrite files in /etc/tomcat8 anymore.
     (Closes: #825786)
+  * Change file permissions to 640 for Debian files in /etc/tomcat8.
 
  -- Markus Koschany <apo@debian.org>  Tue, 02 Aug 2016 10:50:42 +0200
 
