--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.0.37-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 19 Sep 2016 09:20:39 +0200
+
 tomcat8 (8.0.36-3) unstable; urgency=high
 
   * Team upload.
