--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-tomcat8 (8.0.37-1) UNRELEASED; urgency=medium
+tomcat8 (8.0.37-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream release
   * Removed 0001-set-UTF-8-as-default-character-encoding.patch (fixed upstream)
 
- -- Emmanuel Bourg <ebourg@apache.org>  Mon, 19 Sep 2016 09:20:39 +0200
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 19 Sep 2016 09:37:33 +0200
 
 tomcat8 (8.0.36-3) unstable; urgency=high
 
