--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ tomcat8 (8.0.37-2) UNRELEASED; urgency=medium
 
   * Team upload.
   * Fixed the OSGi metadata for tomcat8-jasper.jar and tomcat8-jasper-el.jar
+  * Depend on libcglib-nodep-java instead of libcglib3-java
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 19 Oct 2016 09:06:20 +0200
 
