--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-tomcat8 (8.0.37-2) UNRELEASED; urgency=medium
+tomcat8 (8.0.38-1) UNRELEASED; urgency=medium
 
   * Team upload.
+  * New upstream release
+    - Refreshed the patches
   * Fixed the OSGi metadata for tomcat8-jasper.jar and tomcat8-jasper-el.jar
   * Depend on libcglib-nodep-java instead of libcglib3-java
 
