--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ tomcat8 (8.0.38-1) UNRELEASED; urgency=medium
     - Refreshed the patches
   * Fixed the OSGi metadata for tomcat8-jasper.jar and tomcat8-jasper-el.jar
   * Depend on libcglib-nodep-java instead of libcglib3-java
+  * Removed the unused Lintian overrides
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 19 Oct 2016 09:06:20 +0200
 
