Added the new libtomcat8-embed-java package containing the libraries for embedding Tomcat into other applications

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.0.38-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Added the new libtomcat8-embed-java package containing the libraries
+    for embedding Tomcat into other applications.
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Wed, 26 Oct 2016 11:09:33 +0200
+
 tomcat8 (8.0.38-1) unstable; urgency=medium
 
   * Team upload.
