--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat8 (8.0.38-2) UNRELEASED; urgency=high
+tomcat8 (8.0.38-2) unstable; urgency=high
 
   * Team upload.
   * CVE-2016-1240 follow-up:
@@ -13,7 +13,7 @@ tomcat8 (8.0.38-2) UNRELEASED; urgency=high
     for embedding Tomcat into other applications.
   * Switch to debhelper level 10
 
- -- Emmanuel Bourg <ebourg@apache.org>  Wed, 26 Oct 2016 11:09:33 +0200
+ -- Emmanuel Bourg <ebourg@apache.org>  Fri, 28 Oct 2016 01:17:23 +0200
 
 tomcat8 (8.0.38-1) unstable; urgency=medium
 
