--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.0.39-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Adapted debian/orig-tar.sh to download the 8.5.x releases
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Wed, 16 Nov 2016 18:44:57 +0100
+
 tomcat8 (8.0.39-1) unstable; urgency=medium
 
   * Team upload.
