Promoted libtcnative-1 from suggested to recommended dependency

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ tomcat8 (8.5.8-1) UNRELEASED; urgency=medium
     - Tomcat no longer builds tomcat-embed-logging-juli.jar
     - Updated the policy files
   * Enabled the APR library loading by default (required for HTTP/2 support)
+  * Promoted libtcnative-1 from suggested to recommended dependency
   * Adapted debian/orig-tar.sh to download the 8.5.x releases
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 16 Nov 2016 18:44:57 +0100
