--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ tomcat8 (8.5.8-1) UNRELEASED; urgency=medium
     - Updated the policy files
   * Enabled the APR library loading by default (required for HTTP/2 support)
   * Promoted libtcnative-1 from suggested to recommended dependency
+  * Fixed the test failure with TestStandardContextAliases
   * Adapted debian/orig-tar.sh to download the 8.5.x releases
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 16 Nov 2016 18:44:57 +0100
