Added a link to the Tomcat 8.5 migration guide in README.Debian

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ tomcat8 (8.5.8-1) UNRELEASED; urgency=medium
   * Promoted libtcnative-1 from suggested to recommended dependency
   * Enabled the APR tests
   * Fixed the test failure with TestStandardContextAliases
+  * Added a link to the Tomcat 8.5 migration guide in README.Debian
   * Adapted debian/orig-tar.sh to download the 8.5.x releases
 
  -- Emmanuel Bourg <ebourg@apache.org>  Wed, 16 Nov 2016 18:44:57 +0100
