--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat8 (8.5.8-1) UNRELEASED; urgency=medium
+tomcat8 (8.5.8-1) experimental; urgency=medium
 
   * Team upload.
   * New upstream release
@@ -13,7 +13,7 @@ tomcat8 (8.5.8-1) UNRELEASED; urgency=medium
   * Added a link to the Tomcat 8.5 migration guide in README.Debian
   * Adapted debian/orig-tar.sh to download the 8.5.x releases
 
- -- Emmanuel Bourg <ebourg@apache.org>  Wed, 16 Nov 2016 18:44:57 +0100
+ -- Emmanuel Bourg <ebourg@apache.org>  Thu, 17 Nov 2016 23:54:35 +0100
 
 tomcat8 (8.0.39-1) unstable; urgency=medium
 
