--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ tomcat8 (8.0.14-1+deb8u5) UNRELEASED; urgency=medium
   * Refreshed the expired SSL certificates used by the tests
   * Set the locale when running the tests to prevent locale sensitive tests
     from failing
+  * Added asm-all.jar to the test classpath to fix TestWebappServiceLoader
 
  -- Emmanuel Bourg <ebourg@apache.org>  Tue, 22 Nov 2016 23:21:56 +0100
 
