--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ tomcat8 (8.0.14-1+deb8u5) UNRELEASED; urgency=medium
   * Set the locale when running the tests to prevent locale sensitive tests
     from failing
   * Added asm-all.jar to the test classpath to fix TestWebappServiceLoader
+  * Fixed a test failure in the new TestNamingContext test added with the fix
+    for CVE-2016-6797
 
  -- Emmanuel Bourg <ebourg@apache.org>  Tue, 22 Nov 2016 23:21:56 +0100
 
