Test failures are no longer ignored and now stop the build

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ tomcat8 (8.0.14-1+deb8u5) UNRELEASED; urgency=medium
   * Added asm-all.jar to the test classpath to fix TestWebappServiceLoader
   * Fixed a test failure in the new TestNamingContext test added with the fix
     for CVE-2016-6797
+  * Test failures are no longer ignored and now stop the build
 
  -- Emmanuel Bourg <ebourg@apache.org>  Tue, 22 Nov 2016 23:21:56 +0100
 
