--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.5.8-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Set the proper permissions for /etc/tomcat8/jaspic-providers.xml
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Wed, 30 Nov 2016 16:35:02 +0100
+
 tomcat8 (8.5.8-1) experimental; urgency=medium
 
   * Team upload.
