--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 tomcat8 (8.5.8-2) UNRELEASED; urgency=medium
 
   * Team upload.
+  * The tomcat8 user is no longer removed when the package is purged
+    (Closes: #845385)
   * Set the proper permissions for /etc/tomcat8/jaspic-providers.xml
   * Install the Maven artifacts for tomcat-storeconfig
   * Simplified debian/rules
