--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ tomcat8 (8.5.8-2) UNRELEASED; urgency=medium
   * Team upload.
   * The tomcat8 user is no longer removed when the package is purged
     (Closes: #845385)
+  * Added the delaycompress option to the logrotate configuration
+    of catalina.out (Closes: #843135)
   * Set the proper permissions for /etc/tomcat8/jaspic-providers.xml
   * Install the new library jaspic-api.jar
   * Install the Maven artifacts for tomcat-storeconfig
