--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ tomcat8 (8.5.8-2) UNRELEASED; urgency=medium
     (Closes: #845661)
   * Added the delaycompress option to the logrotate configuration
     of catalina.out (Closes: #843135)
+  * Changed the home directory for the tomcat8 user from /usr/share/tomcat8
+    to /var/lib/tomcat8 (Closes: #833261)
   * Set the proper permissions for /etc/tomcat8/jaspic-providers.xml
   * Install the new library jaspic-api.jar
   * Install the Maven artifacts for tomcat-storeconfig
