--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-tomcat8 (8.5.8-2) UNRELEASED; urgency=medium
+tomcat8 (8.5.8-2) unstable; urgency=medium
 
   * Team upload.
+  * Upload to unstable.
   * No longer make /etc/tomcat8/Catalina/localhost writable by the tomcat8 user
     in the postinst script (Closes: #845393)
   * The tomcat8 user is no longer removed when the package is purged
@@ -17,7 +18,7 @@ tomcat8 (8.5.8-2) UNRELEASED; urgency=medium
   * Install the Maven artifacts for tomcat-storeconfig
   * Simplified debian/rules
 
- -- Emmanuel Bourg <ebourg@apache.org>  Wed, 30 Nov 2016 16:35:02 +0100
+ -- Emmanuel Bourg <ebourg@apache.org>  Thu, 01 Dec 2016 18:41:14 +0100
 
 tomcat8 (8.5.8-1) experimental; urgency=medium
 
