--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat8 (8.5.9-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release
+    - Refreshed the patches
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Mon, 05 Dec 2016 22:47:09 +0100
+
 tomcat8 (8.5.8-2) unstable; urgency=medium
 
   * Team upload.
