Fixed the installation error when JAVA_OPTS contains % (Closes: #770911)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ tomcat8 (8.5.9-1) UNRELEASED; urgency=medium
     - Refreshed the patches
   * Restored the classloading from the common, server and shared directories
     under CATALINA_BASE (Closes: #847137)
+  * Fixed the installation error when JAVA_OPTS in /etc/default/tomcat8
+    contains the '%' character (Closes: #770911)
 
  -- Emmanuel Bourg <ebourg@apache.org>  Mon, 05 Dec 2016 22:47:09 +0100
 
