Upload to jessie-security

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
-tomcat8 (8.0.14-1+deb8u5) UNRELEASED; urgency=medium
+tomcat8 (8.0.14-1+deb8u5) jessie-security; urgency=high
 
+  * Fixed CVE-2016-9774: Potential privilege escalation when the tomcat8
+    package is upgraded. Thanks to Paul Szabo for the report (Closes: #845393)
+  * Fixed CVE-2016-9775: Potential privilege escalation when the tomcat8
+    package is purged. Thanks to Paul Szabo for the report (Closes: #845385)
   * Fixed CVE-2016-6816: The code that parsed the HTTP request line permitted
     invalid characters. This could be exploited, in conjunction with a proxy
     that also permitted the invalid characters but with a different
@@ -30,13 +34,9 @@ tomcat8 (8.0.14-1+deb8u5) UNRELEASED; urgency=medium
   * Added asm-all.jar to the test classpath to fix TestWebappServiceLoader
   * Fixed a test failure in the new TestNamingContext test added with the fix
     for CVE-2016-6797
-  * Fixed a potential privilege escalation when the tomcat8 package is upgraded.
-    Thanks to Paul Szabo for the report (Closes: #845393)
-  * Fixed a potential privilege escalation when the tomcat8 package is purged.
-    Thanks to Paul Szabo for the report (Closes: #845385)
   * Test failures are no longer ignored and now stop the build
 
- -- Emmanuel Bourg <ebourg@apache.org>  Tue, 22 Nov 2016 23:21:56 +0100
+ -- Emmanuel Bourg <ebourg@apache.org>  Sat, 17 Dec 2016 09:19:36 +0100
 
 tomcat8 (8.0.14-1+deb8u4) jessie-security; urgency=medium
 
