--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat8 (8.5.9-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Require Java 8 or higher (Closes: #848612)
+
+ -- Emmanuel Bourg <ebourg@apache.org>  Sun, 18 Dec 2016 23:52:21 +0100
+
 tomcat8 (8.5.9-1) unstable; urgency=medium
 
   * Team upload.
