--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-tomcat8 (8.5.11-1) UNRELEASED; urgency=medium
+tomcat8 (8.5.11-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream release
     - Refreshed the patches
   * Recommend Java 8 in /etc/default/tomcat8
 
- -- Emmanuel Bourg <ebourg@apache.org>  Tue, 20 Dec 2016 19:29:17 +0100
+ -- Emmanuel Bourg <ebourg@apache.org>  Tue, 17 Jan 2017 15:09:30 +0100
 
 tomcat8 (8.5.9-2) unstable; urgency=medium
 
